--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "14.x"
   },
   "scripts": {
+    "tsc": "tsc",
     "start": "node dist/server.js",
     "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,7 +26,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mustache-express": "^1.3.1"
+    "mustache-express": "^1.3.1",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
